--- a/json-parser/build.gradle
+++ b/json-parser/build.gradle
@@ -17,12 +17,13 @@ repositories {
 tasks.named('test', Test) {
     useJUnitPlatform()
     testLogging {
-        events 'failed', 'passed', 'skipped', 'standard_out', 'standard_error'
+        events 'failed', 'skipped', 'standard_out', 'standard_error'
         exceptionFormat "full"
     }
 }
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.3'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
