--- a/jakarta-json-processing/build.gradle
+++ b/jakarta-json-processing/build.gradle
@@ -27,4 +27,8 @@ dependencies {
     implementation project(':json-value')
     implementation project(':json-parser')
     implementation project(':json-writer')
+
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.3'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
