--- a/jakarta-json-processing/build.gradle
+++ b/jakarta-json-processing/build.gradle
@@ -14,6 +14,12 @@ repositories {
     mavenCentral()
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '-Xlint:unchecked'
+    options.deprecation = true
+    options.encoding = 'UTF-8'
+}
+
 tasks.named('test', Test) {
     useJUnitPlatform()
     testLogging {
