--- a/jakarta-json-processing/build.gradle
+++ b/jakarta-json-processing/build.gradle
@@ -1,8 +1,10 @@
 plugins {
     id 'java'
+    id 'maven-publish'
 }
 
-version = '0.1'
+group 'ahodanenok.json'
+version '0.1'
 
 java {
     sourceCompatibility = JavaVersion.VERSION_17
@@ -12,6 +14,18 @@ java {
 repositories {
     mavenLocal()
     mavenCentral()
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = project.group
+            artifactId = project.name
+            version = project.version
+
+            from components.java
+        }
+    }
 }
 
 tasks.withType(JavaCompile) {
@@ -37,4 +51,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.3'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    testRuntimeOnly 'org.eclipse.parsson:parsson:1.1.0'
+    testRuntimeOnly 'jakarta.json:jakarta.json-tck-tests:2.1.0'
 }
