--- a/json-parser/build.gradle
+++ b/json-parser/build.gradle
@@ -1,8 +1,10 @@
 plugins {
     id 'java'
+    id 'maven-publish'
 }
 
-version = '0.1'
+group 'ahodanenok.json'
+version '0.1'
 
 java {
     sourceCompatibility = JavaVersion.VERSION_17
@@ -12,6 +14,18 @@ java {
 repositories {
     mavenLocal()
     mavenCentral()
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = project.group
+            artifactId = project.name
+            version = project.version
+
+            from components.java
+        }
+    }
 }
 
 tasks.withType(JavaCompile) {
